bodycandy.com (archived on 2013-12-26)
{
  "alexa_rank": 107001,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 1685,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.54,
  "homepage_snapshot_redirected_domain": "bodycandy.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131003025633id_/http://www.bodycandy.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131003025633id_/http%3A//bodycandy.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bodycandy.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226190031id_/http%3A//www.bodycandy.com/cgi-bin/category/privacypolicy",
  "policy_title": "Body Candy Body Jewelry",
  "policy_url": "bodycandy.com/cgi-bin/category/privacypolicy",
  "sha1": "277d3cdde7236b0d547a1f212674ff21863dbbb2",
  "simhash": 14472484202496714228,
  "simhash_updated": false,
  "site_hostname": "bodycandy.com",
  "site_url": "http://bodycandy.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131226190031",
  "word_count": 256,
  "year": 2013
}

--- a/b/bo/bod/bodycandy.com.html
+++ b/b/bo/bod/bodycandy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bodycandy.com privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601204959id_/http%3A//www.bodycandy.com/cgi-bin/category/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bodycandy.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226190031id_/http%3A//www.bodycandy.com/cgi-bin/category/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -12,7 +12,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <!-- eCommerce Shopping Cart Software Copyright Make-a-Store.com -->
 
-<script type="text/javascript" src="/mas_assets/common.js"></script>
+<script type="text/javascript" async="" src="https://cc40d5bc4c72fe8b93fd-dd4a43e14b3222b1a655c0b47b968de4.ssl.cf2.rackcdn.com/gascript.js"></script><script type="text/javascript" src="/mas_assets/common.js"></script>
 
 <meta charset="UTF-8">
 <link rel="shortcut icon" href="favicon.ico">
@@ -63,15 +63,24 @@ anylinkcssmenu.init("anchorclass")
         <![endif]-->
 
 
+<script type="text/javascript">
+var _roiq=[];var _gaq={push:function(){var a;for(a=0;a<arguments.length;a++){_roiq.push(arguments[a])}}};var _gat={trackingObjects:{},_createTracker:function(a,b){return new _gat.Tracker(a,b)},_getTracker:function(a){return _gat._createTracker(a)},_getTrackerByName:function(a){var a=a||"";if(_gat.trackingObjects.hasOwnProperty(a)){return _gat.trackingObjects[a]}return _gat._createTracker("UA-XXXXX-X",a)},_anonymizeIp:function(){_gaq.push("_gat._anonymizeIp")},_forceSSL:function(){_gaq.push("_gat._forceSSL")},_getPlugin:function(){_gaq.push("_gat._getPlugin")},Tracker:function(a,g){var c,h,e=["_addDevId","_addEventListener","_addIgnoredOrganic","_addIgnoredRef","_addItem","_addOrganic","_addTrans","_clearIgnoredOrganic","_clearIgnoredRef","_clearOrganic","_clearTrans","_clearXKey","_clearXValue","_cookiePathCopy","_createEventTracker","_createXObj","_deleteCustomVar","_get","_getAccount","_getClientInfo","_getDetectFlash","_getDetectTitle","_getLinkerUrl","_getLocalGifPath","_getName","_getPlugin","_getServiceMode","_getVersion","_getVisitorCustomVar","_getXKey","_getXValue","_initData","_link","_linkByPost","_removeEventListener","_sendXEvent","_set","_setAccount","_setAllowAnchor","_setAllowHash","_setAllowLinker","_setAutoTrackOutbound","_setCampCIdKey","_setCampContentKey","_setCampIdKey","_setCampMediumKey","_setCampNOKey","_setCampNameKey","_setCampSourceKey","_setCampTermKey","_setCampaignCookieTimeout","_setCampaignTrack","_setClientInfo","_setCookiePath","_setCookiePersistence","_setCookieTimeout","_setCustomVar","_setDetectFlash","_setDetectTitle","_setDomainName","_setHrefExamineLimit","_setLocalGifPath","_setLocalRemoteServerMode","_setLocalServerMode","_setMaxCustomVariables","_setNamespace","_setPageGroup","_setReferrerOverride","_setRemoteServerMode","_setSampleRate","_setSessionCookieTimeout","_setSessionTimeout","_setSiteSpeedSampleRate","_setTrackOutboundSubdomains","_setTrans","_setTransactionDelim","_setVar","_setVisitorCookieTimeout","_setXKey","_setXValue","_trackEvent","_trackPageLoadTime","_trackPageview","_trackSocial","_trackTiming","_trackTrans","_visitCode"];var b=g||"";var f=a||"UA-XXXXX-X";for(c=0;c<e.length;c++){h=e[c];this[h]=d(h)}function d(i){return function(){if(b){i=b+"."+i}var j=Array.prototype.slice.call(arguments,0);j.unshift(i);_roiq.push(j)}}_gat.trackingObjects[b]=this}};
+(function () {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://cc40d5bc4c72fe8b93fd-dd4a43e14b3222b1a655c0b47b968de4.ssl.cf2.rackcdn.com/gascript.js' : 'http://fc07f053f50f1f9ce665-dd4a43e14b3222b1a655c0b47b968de4.r68.cf2.rackcdn.com/gascript.js');
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(ga, s);
+})();
+</script>
+
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-185506-1");
-pageTracker._initData();
-pageTracker._trackPageview();
+_gaq.push(['_setAccount', 'UA-185506-1']);
+_gaq.push(['_trackPageview']);
 </script>
 
 
@@ -84,10 +93,31 @@ pageTracker._trackPageview();
 
 
 
-</head>
+
+<!--Open Body Tag -->
+<script type="text/javascript">
+    document.write(unescape("%3Cscript src='"
+        + ((document.location.protocol == "https:") ? "https:" : "http:")
+        + "//p.bm23.com/bta.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://p.bm23.com/bta.js" type="text/javascript"></script>
+<script type="text/javascript">
+    var bta = new __bta('aoccjfhynmytsfmybobuqeinmmrwbif');
+    bta.setHost("app.bronto.com");
+</script>
+
+
+<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 
 <body>
-
+<script type="text/javascript">
+	document.write(unescape("%3Cscript src='"
+		+ ((document.location.protocol == "https:") ? "https:" : "http:")
+		+ "//p.bm23.com/bta.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://p.bm23.com/bta.js" type="text/javascript"></script>
+<script type="text/javascript">
+	var bta = new __bta('aoccjfhynmytsfmybobuqeinmmrwbif');
+	bta.setHost("app.bronto.com");
+</script>
 
 <div id="wrap">
 
@@ -100,10 +130,10 @@ pageTracker._trackPageview();
 
 
 
-<a href="http://www.bodycandy.com/cgi-bin/category/bodyjewelry"><img src="/mas_assets/geo_zones/header_banner/US/CA.jpg" border="0"></a> <p>
+<a href="http://www.bodycandy.com/cgi-bin/category/bodyjewelry"><img src="/mas_assets/geo_zones/header_banner/US/VA.jpg" border="0"></a> <p>
 <script>
 var cookieName="BODYCANDYID";
-var cookieValue = "www1.bodycandy.com";
+var cookieValue = "db.bodycandy.com";
  document.cookie = cookieName+"="+escape(cookieValue);
 </script>
  <span style="font-size: 14px;font-weight:bold;">You're <font color="#B1002A">$ 19.99</font> Away From Free Shipping!</span>
@@ -175,7 +205,7 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
 		<a href="http://www.bodycandy.com/cgi-bin/category/beltbuckle">Belt Buckles</a>
 		<a href="http://www.bodycandy.com/cgi-bin/category/gift">Custom Jewelry</a>
 <!-- Client search form starts -->
-			<form id="headersearch" method="GET" action="http://www.bodycandy.com/cgi-bin/search.pl">
+			<form id="headersearch" method="GET" action="/cgi-bin/search.pl">
 				<input type="text" id="txtQuery" name="query" onclick="if (!this.clearCounter) {this.value=''} this.clearCounter++;" autocomplete="off" value="SEARCH">
 				<input type="submit" value="»" style="vertical-align: top;">
 
@@ -234,6 +264,7 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
 		<h3>Body Jewelry</h3>
 
 		<ul class="leftnav">
+<li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/body_jewelry_h1/Holiday-Body-Jewelry.html" title="Holiday Body Jewelry">Holiday Body Jewelry</a></li> 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/newarrivals/NEW-Arrivals.html" title="NEW Arrivals">NEW Arrivals</a></li> 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/bananna/Belly-Button-Navel-Rings.html" title="Belly Button Navel Rings">Belly Button Navel Rings</a></li> 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/noserings/Nose-Rings.html" title="Nose Rings">Nose Rings</a></li> 
@@ -271,7 +302,6 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/clearance/CLEARANCE.html" title="CLEARANCE">CLEARANCE</a></li> 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/piercingtools/Gift-Boxes---Aftercare.html" title="Gift Boxes - Aftercare">Gift Boxes - Aftercare</a></li> 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/fakebodyjewelry/Fake---Non-Pierce-Jewelry.html" title="Fake / Non Pierce Jewelry">Fake / Non Pierce Jewelry</a></li> 
-<li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/body_jewelry_h1/Holiday-Body-Jewelry.html" title="Holiday Body Jewelry">Holiday Body Jewelry</a></li> 
 <li><a class="hassubcats" href="http://www.bodycandy.com/cgi-bin/category/giftcertificate/Gift-Certificates.html" title="Gift Certificates">Gift Certificates</a></li> 
 
 		</ul><!-- end of nav tree -->
@@ -387,6 +417,8 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
 			<img src="/mas_assets/images/pinterest.png" alt="Pinterest"> <a href="http://pinterest.com/bodycandyloves" target="_blank">Follow us on Pinterest</a><br>
 			<img src="/mas_assets/images/googleplus.png" alt="Google+"> <a href="https://www.google.com/+bodycandy" target="_blank">Follow us on Google+</a><br>
 			<img src="/mas_assets/images/tumblr.png" width="16px" height="16px" alt="Tumblr"> <a href="http://bodycandybodyjewelry.tumblr.com/" target="_blank">Follow us on Tumblr</a><br>
+			<img src="/mas_assets/images/polyvore.png" width="16px" height="16px" alt="Polyvore"> <a href="http://bodycandy.polyvore.com/" target="_blank">Follow us on Polyvore</a><br>
+			<img src="/mas_assets/images/wanelo.png" width="16px" height="16px" alt="Wanelo"> <a href="http://wanelo.com/store/bodycandy" target="_blank">Follow us on Wanelo</a><br>
 			<img src="/mas_assets/images/feed.png" alt="RSS"> <a href="http://www.bodycandy.com/newproducts.rss.xml" target="_blank">New Products</a> <br>
 			<img src="/mas_assets/images/feed.png" alt="RSS"> <a href="http://www.bodycandy.com/blog/feed/" target="_blank">Body Candy News</a>
 			</div>
@@ -395,6 +427,7 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
 		<h4>Categories</h4>
 		<ul>
 
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/body_jewelry_h1/Holiday-Body-Jewelry.html">Holiday Body Jewelry</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/newarrivals/NEW-Arrivals.html">NEW Arrivals</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/bananna/Belly-Button-Navel-Rings.html">Belly Button Navel Rings</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/noserings/Nose-Rings.html">Nose Rings</a></li>
@@ -405,8 +438,8 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/earring/Earrings.html">Earrings</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/expanders/Plugs.html">Plugs</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/bioplast/Bioplast.html">Bioplast</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/bonuspacks/Bonus-Packs.html">Bonus Packs</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/solid14ktgold/14-kt-Gold-Body-Jewelry.html">14 kt Gold Body Jewelry</a></li></ul><ul>
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/bonuspacks/Bonus-Packs.html">Bonus Packs</a></li></ul><ul>
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/solid14ktgold/14-kt-Gold-Body-Jewelry.html">14 kt Gold Body Jewelry</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/bareybar/Eyebrow-Rings.html">Eyebrow Rings</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/spiraltwister/Rings---Circular---BCR's.html">Rings / Circular / BCR's</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/bellychain/Belly-Chains.html">Belly Chains</a></li>
@@ -417,8 +450,8 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/retainers/Retainers.html">Retainers</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/beltbuckle/Belt-Buckles.html">Belt Buckles</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/toe-rings/Toe-Rings.html">Toe Rings</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/so6ati/Titanium-Body-Jewelry.html">Titanium Body Jewelry</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/necklace/Necklaces-&amp;-Pendants.html">Necklaces &amp; Pendants</a></li></ul><ul>
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/so6ati/Titanium-Body-Jewelry.html">Titanium Body Jewelry</a></li></ul><ul>
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/necklace/Necklaces-&amp;-Pendants.html">Necklaces &amp; Pendants</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/addoncharms/Replacement-Balls-Parts.html">Replacement Balls Parts</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/tattoo/Temporary-Tattoos.html">Temporary Tattoos</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/apparelbc/Apparel.html">Apparel</a></li>
@@ -429,10 +462,9 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/inpi/316L-Basic-Collection.html">316L Basic Collection</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/intimatepierce/Intimate-Piercings.html">Intimate Piercings</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/keychains/Key-Chains.html">Key Chains</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/clearance/CLEARANCE.html">CLEARANCE</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/piercingtools/Gift-Boxes---Aftercare.html">Gift Boxes - Aftercare</a></li></ul><ul>
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/clearance/CLEARANCE.html">CLEARANCE</a></li></ul><ul>
+        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/piercingtools/Gift-Boxes---Aftercare.html">Gift Boxes - Aftercare</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/fakebodyjewelry/Fake---Non-Pierce-Jewelry.html">Fake / Non Pierce Jewelry</a></li>
-        <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/body_jewelry_h1/Holiday-Body-Jewelry.html">Holiday Body Jewelry</a></li>
         <li style="width: 160px;"><a href="http://www.bodycandy.com/cgi-bin/category/giftcertificate/Gift-Certificates.html">Gift Certificates</a></li>
 </ul>		
 		</nav>
@@ -467,6 +499,38 @@ document.write("<a href=\"http://www.bodycandy.com/cgi-bin/category/exclusive\" 
 
 <!-- <a href="http://www.make-a-store.com/" target="_blank"><img src="/mas_assets/poweredby.gif"  alt="[Powered by Make-a-Store!]" border="0"></a> -->
 <script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
+
+<script type="text/javascript">
+//disable right click on images
+$(document).ready(function(){
+    $('img').live('contextmenu', function(e) {
+        return false;
+    }); 
+    $('img').live('dragstart', function(e) {
+        return false;
+    }); 
+
+});
+
+adroll_adv_id = "KPA5PUABUZFBTMCB7DS226";
+adroll_pix_id = "C5FCXLDOYJFX3JR7TLSQ7G";
+ (function () {
+  var _onload = function(){
+   if (document.readyState && !/loaded|complete/.test(document.readyState)){setTimeout(_onload, 10);return}
+   if (!window.__adroll_loaded){__adroll_loaded=true;setTimeout(_onload, 50);return}
+   var scr = document.createElement("script");
+   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+   scr.setAttribute('async', 'true');
+   scr.type = "text/javascript";
+   scr.src = host + "/j/roundtrip.js";
+   ((document.getElementsByTagName('head') || [null])[0] ||
+    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);};
+  if (window.addEventListener) {window.addEventListener('load', _onload, false);}
+  else {window.attachEvent('onload', _onload)}}());
+</script>
+
+
+
 
 
 
