--- a/f/fo/fou/fourwinds10.com.html
+++ b/f/fo/fou/fourwinds10.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fourwinds10.com privacy policy that was archived on 2013-05-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130517193012id_/http%3A//www.fourwinds10.net/siterun_static/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fourwinds10.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226223247id_/http%3A//www.fourwinds10.net/siterun_static/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 <title>  Privacy  &gt;&gt; Four Winds 10 - fourwinds10.com</title>
@@ -14,7 +14,7 @@
 <meta name="google-site-verification" content="Y7CpfHAEWpu4kkjTEfjQvOFspswO-DUmQuawozq12jk">
 <meta name="y_key" content="a3ca369f2ff20a0b">
 <meta name="liquid-cdn-cache-file-name" content="861e8d33bc2948edb11742884c29a8c9">
-<meta name="liquid-cdn-cache-file-time" content="05-17-2013 01:41:19">
+<meta name="liquid-cdn-cache-file-time" content="12-26-2013 03:25:47">
 <link rel="stylesheet" type="text/css" href="/resources/themes/news/core.css">
 <!--[if IE 6]>
   <link rel="stylesheet" type="text/css" href="/resources/themes/news/ie6.css" />
@@ -30,7 +30,7 @@
 	</div>
 </div>
 <div class="header_image">
-			<img src="/resources/random_image/P7150051.jpg" alt="FourWinds10.com - Delivering Truth Around the World">		</div>
+			<img src="/resources/random_image/P5120392.jpg" alt="FourWinds10.com - Delivering Truth Around the World">		</div>
 
 <div id="top-nav-wrapper">
   <ul id="topnav">
@@ -269,23 +269,8 @@
 </div>
 </div>
 
-<div class="header_tools_right">
-
-<div id="google_translate_element"></div>
-  <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script>
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en'
-    }, 'google_translate_element');
-  }
-  </script>
-  
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-</div>
-    
-</div> 
 <div class="clear"></div>
-<div class="news_viewer_container">
+<img src="/computer-purchase.jpg" style="width: 100%;"><div class="news_viewer_container">
 <div class="section_header"><h1>» Privacy Policy for fourwinds10.com</h1></div>
 
 
@@ -339,6 +324,7 @@
 			<h2>Services</h2>
 				<ul>
 				  <li><a href="/siterun_static/rates/">Advertise on Our Site</a></li>
+				  <li><a href="http://rapidcityjournal.com/news/local/irs-pioneer-credit-official-owes-million/article_11b06a07-a112-57cd-ba39-f54e53258efe.html">Todd Ossenfort</a></li>
 				  <li><a href="/siterun_static/general/contact_us.php/">Contact Us </a></li>
 				  <li class="ft_rss"><a href="/siterun_rss/">RSS</a></li>
 				  <li><a href="/siterun_static/privacy/">Privacy Policy</a></li>
@@ -361,7 +347,7 @@
   </div>
 
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="/common/functions/FN_client.js" type="text/javascript"></script>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
@@ -403,4 +389,4 @@ qacct:"p-3fjOMrBPUq7-E"
 
 
 
-</body></html>
+</div></body></html>
