--- a/z/zt/ztr/ztrenzdirectory.com.html
+++ b/z/zt/ztr/ztrenzdirectory.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the ztrenzdirectory.com privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623102801id_/http%3A//www.godaddy.com/agreements/ShowDoc.aspx%3Fpageid%3Dprivacy_parkedpage) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ztrenzdirectory.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226224735id_/http%3A//www.godaddy.com/agreements/ShowDoc.aspx%3Fpageid%3Dprivacy_parkedpage) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_Head1"><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="Stylesheet" type="text/css" href="http://img2.wsimg.com/fos/css/1/sales_http_20121029.css"><meta http-equiv="content-language" content="en"><title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="Stylesheet" type="text/css" href="http://img2.wsimg.com/fos/css/1/sales_http_20130827.css"><meta http-equiv="content-language" content="en-US"><title>
 Legal Agreement
 </title><meta name="description"><meta name="keywords"><meta http-equiv="Pragma" content="no-cache">
 <script type="text/javascript">
@@ -12,9 +12,9 @@ Content_pageLoad(sender, args);
 </script>
 </head>
 <body id="ctl00_PageBody" style="width: 100%; margin: 0px;">
-<script src="http://img3.wsimg.com/AtlantisScripts/jquery/jquery-1.3.1.min.js" type="text/javascript"></script>
+<script src="http://img2.wsimg.com/AtlantisScripts/jquery/jquery-1.3.1.min.js" type="text/javascript"></script>
 <script type="text/javascript" language="javascript" src="http://img.godaddy.com/JS_Lib/traffic.js"></script>
-<img src="http://img.godaddy.com/image.aspx?sitename=www.godaddy.com&amp;server=M1PWCORPWEB112&amp;privatelabelid=1&amp;isc=smtwfos&amp;status=200&amp;rand=0.466813760095655&amp;page=%2fagreements%2fShowDoc.aspx&amp;referrer=http%3a%2f%2fwww.bobparsons.me%2findex.php&amp;split=50&amp;pcsplit=2&amp;querystring=pageid%3dprivacy_parkedpage%2526hpGoogleStatic%253d1" alt="" class="traffic">
+<img src="http://img.godaddy.com/image.aspx?sitename=www.godaddy.com&amp;server=P3PWCORPWEB144&amp;privatelabelid=1&amp;isc=man&amp;status=200&amp;rand=299798&amp;page=%2fagreements%2fShowDoc.aspx&amp;referrer=http%3a%2f%2fvuvu.mobi%2fwatch-video%2f%25C2%25A1mas-espectaculo-temp-2-prog-2-bloque-58-empleo-y-formacion-entrevista-amvit-radio%2fnSWVslF3qwc&amp;split=71&amp;pcsplit=3&amp;querystring=pageid%3dprivacy_parkedpage&amp;seg=0" alt="" class="traffic">
 <div>
 <style type="text/css">
 .closeButton {
@@ -420,22 +420,21 @@ Copyright © 2010-2013 GoDaddy.com, LLC All Rights Reserved.
 </tbody></table>
 </div>
 <div id="idTxDisclaimer" class="g-modal g-modal-no-titlebar" style="display: none;">
-<a href="#" class="g-modal-close dis-close OneLinkNoTx"><span>close</span></a>
+<a href="#" class="g-modal-close dis-close OneLinkNoTx"><span>Close</span></a>
 <div class="g-modal-content OneLinkNoTx">
-<strong class="dis-cont-es">Este Acuerdo traducido se proporciona solamente como una comodidad y no más para facilitar la lectura y la comprensión de la versión en ingles.  El propósito de proporcionar el Acuerdo en idioma extranjero no es para crear un acuerdo jurídicamente vinculante, ni es un substituto para la validez legal de la versión en ingles.  En caso de cualquier controversia o conflicto, la versión en ingles de este Acuerdo en todos los casos gobernará nuestra relación y prevalecerá sobre los términos en cualesquier otro idioma.</strong>
 </div>
 <div class="g-modal-buttonpane OneLinkNoTx">
 <a href="#" class="dis-close"><span>Close</span></a>
 </div>
 </div>
-<script src="http://img3.wsimg.com/shared/js/jquery.plugins.min.20111019.js" type="text/javascript"></script>
+<script src="http://img2.wsimg.com/shared/js/jquery.plugins.min.20111019.js" type="text/javascript"></script>
 <script language="javascript" type="text/javascript">
 $(document).ready(function () {
 });
 </script>
 </div>
-<script src="http://img3.wsimg.com/fastball/js_lib/FastballLibrary0006.min.js?version=2" type="text/javascript"></script>
-<script src="http://img3.wsimg.com/fos/script/sales17.min.js" type="text/javascript"></script>
+<script src="http://img2.wsimg.com/fastball/js_lib/FastballLibrary0006.min.js?version=2" type="text/javascript"></script>
+<script src="http://img2.wsimg.com/fos/script/sales19.min.js" type="text/javascript"></script>
 
 <script type="text/javascript" language="javascript">
 var internal_clicked=true;
