--- a/c/ci/cir/circleid.com.html
+++ b/c/ci/cir/circleid.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the circleid.com privacy policy that was archived on 2013-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130625142531id_/http%3A//www.circleid.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the circleid.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227004000id_/http%3A//www.circleid.com/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 	<title>CircleID - About CircleID</title>
@@ -158,13 +158,16 @@ GA_googleFetchAds();
 					<a href="http://www.circleid.com/members/5645">Architelos</a>
 					<a href="http://www.circleid.com/members/4770">ARI Registry Services</a>
 					<a href="http://www.circleid.com/members/6636">Cloud Registry</a>
+					<a href="http://www.circleid.com/members/7162">Dot Chinese Online &amp;<br>Dot Chinese Website</a>
 					<a href="http://www.circleid.com/members/1975">dotMobi</a>
 					<a href="http://www.circleid.com/members/4557">Dyn Inc.</a>
 					<a href="http://www.circleid.com/members/2920">Hostway</a>
+					<a href="http://www.circleid.com/members/6987">LogicBoxes</a>
 					<a href="http://www.circleid.com/members/3844">MarkMonitor</a>
 					<a href="http://www.circleid.com/members/4117">Nominum</a>
 					<a href="http://www.circleid.com/members/1582">Neustar</a>
 					<a href="http://www.circleid.com/members/5703">Minds + Machines</a>
+					<a href="http://www.circleid.com/members/6851">Radix Registry</a>
 					<a href="http://www.circleid.com/members/3406">RegistryPro</a>
 					<a href="http://www.circleid.com/members/5910">Sedari</a>
 					<a href="http://www.circleid.com/members/5593">Verisign</a>
@@ -387,7 +390,7 @@ amended Privacy Statement.</p>
 			Copyright © 2002-2013 CircleID.
 			&nbsp;<a href="http://www.iomemo.com">Iomemo Inc.</a>
 			&nbsp;All rights reserved unless where otherwise noted.
-			<br>Local Time: Tuesday, June 25, 2013 07:25 AM PDT – Page Load: 0.1480 Sec.
+			<br>Local Time: Thursday, December 26, 2013 04:39 PM PST – Page Load: 0.1463 Sec.
 		</div>
 	</div>
 	<div id="footerBtm"><div></div></div>
