lxer.com (archived on 2013-12-27)
{
  "alexa_rank": 192255,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 2273,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.23,
  "homepage_snapshot_redirected_domain": "lxer.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130927052747id_/http://lxer.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130927052747id_/http%3A//lxer.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "lxer.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227012052id_/http%3A//lxer.com/module/pages/v/4",
  "policy_title": "LXer: Privacy Policy",
  "policy_url": "lxer.com/module/pages/v/4",
  "sha1": "0cddb21724a0c6b319dc2a2890dc7bea4c21ff1e",
  "simhash": 15299903456909344066,
  "simhash_updated": false,
  "site_hostname": "lxer.com",
  "site_url": "http://lxer.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131227012052",
  "word_count": 401,
  "year": 2013
}

--- a/l/lx/lxe/lxer.com.html
+++ b/l/lx/lxe/lxer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lxer.com privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627163207id_/http%3A//lxer.com/module/pages/v/4) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lxer.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227012052id_/http%3A//lxer.com/module/pages/v/4) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -40,7 +40,7 @@
 
 
         <div id="logo">
-          <a href="http://lxer.com/"><img src="/images/lxer.png" alt="LXer" width="159" height="69"></a>
+          <a href="http://lxer.com/"><img src="/images/lxer_seasonal.gif" alt="LXer" width="159" height="69"></a>
           <div id="logo_text">
             <h2>Linux News<br>The world is talking about GNU/Linux and Free/Open Source Software</h2>
           </div><!--End of ID logo_text (159x69) -->
@@ -49,10 +49,10 @@
 <div id="sidebar">
 <div class="block"><h2>Login</h2>
 If you don't have an account yet, visit the <a href="/members/signup.php">registration page</a> to sign up.  <p>If you already have an account, you may login here:  </p><form method="post" action="/members/login.php">  Username:<br><input name="u" size="15" type="text"> <br>    <br>  Password:<br><input name="p" size="15" type="password">    <br>    <br>  <input name="submit" value="Login" type="submit">  </form>    
-</div><div class="block"><h2>Today's Big Story</h2><p><a href="/module/newswire/view/187434/index.html">More PXE Magic</a></p></div><div class="block"><h2>LXer Features</h2><p><a href="/module/newswire/view/186709/index.html">Gems from Southeast LinuxFest</a></p><p><a href="/module/newswire/view/186075/index.html">Smartcars: Dangerous if software companies would make them</a></p><p><a href="/module/newswire/view/185924/index.html">High-res batch convert EMZ / WMZ grahpics to PNG a.k.a. "liberating your graphics"</a><br>
+</div><div class="block"><h2>Today's Big Story</h2><p><a href="/module/newswire/view/196323/index.html">The PlayStation 4 Does Use The FreeBSD Kernel, Mono</a></p></div><div class="block"><h2>LXer Features</h2><p><a href="/module/newswire/view/195985/index.html">Fedora 20 Released With New, Newer, and Newest</a></p><p><a href="/module/newswire/view/193966/index.html">Trouble-shooting a VoIP Modem</a></p><p><a href="/module/newswire/view/189639/index.html">Linux Malware: Should we be afraid?</a><br>
 <br>
-</p></div><div class="block"><h2>This week at LWN</h2><a href="/module/newswire/view/186628/index.html">The Linus and Dirk show</a> <br></div><div class="block"><h2>Have something to say?</h2>
-LXer is read by around 350,000 individuals each month, and is an excellent  place for you to publish your ideas, thoughts, reviews, complaints,  etc.&nbsp; Do you have something to say to the Linux community?&nbsp; <br>  <br>  <a href="/story_howto.php" target="_self">Publish it here.</a>
+</p></div><div class="block"><h2>Have something to say?</h2>
+Ready to be published?&nbsp; LXer is read by around 350,000 individuals each month, and is an excellent  place for you to publish your ideas, thoughts, reviews, complaints,  etc.&nbsp; Do you have something to say to the Linux community?&nbsp; <br>  <br>  <a href="/story_howto.php" target="_self">Publish it here.</a>
 
 </div><div class="block"><h2>Products</h2>
 <div style="text-align: center;"><a href="/module/db/index.php?dbn=14"><img alt="LXer Pre-Installed Linux Database" src="/content/plvdb160x120.jpg" border="0" height="120" width="160"></a><br><a href="/module/db/index.php?dbn=14">The LXer Pre-Installed Linux Vendor Database - This is so Kewl, you know you really want to check it out!</a></div>
@@ -60,51 +60,48 @@ LXer is read by around 350,000 individuals each month, and is an excellent  plac
 <strong><a href="http://www.daniweb.com/hardware-and-software/linux-and-unix/12">DaniWeb Linux Community</a></strong><br> An exciting professional discussion group about <a href="http://www.daniweb.com/software-development/2">software development</a>, <a href="http://www.daniweb.com/web-development/php/17">php</a>,&nbsp;&nbsp; <a href="http://www.daniweb.com/software-development/shell-scripting/113">shell scripting</a>, <a href="http://www.daniweb.com/hardware-and-software/networking/13"> networking</a>, <a href="http://www.daniweb.com/web-development/ruby/73">ruby</a>, and <a href="http://www.daniweb.com/">more.</a>
 
 </div><div class="block"><h2>Latest Discussions</h2><table><tbody><tr class="even">
-  <td> <a href="/module/forums/t/34764/" title="Munich to distribute Linux CDs to get people to ditch Windows XP">Now this is cool.</a><br></td>
+  <td> <a href="/module/forums/t/35112/" title="Whatever your stance on privacy, Edward Snowden has a Xmas message for you">oh goodie politics is on the LXer table</a><br></td>
 </tr>
 
 <tr class="odd">
-  <td> <a href="/module/forums/t/34767/" title="Mint 15 freshens Ubuntu's bad bits">Is Unity bashing a new sport?</a><br></td>
+  <td> <a href="/module/forums/t/35109/" title="Linux Developers Asked To Distance Themselves From RMS">Richard Stallman would never...</a><br></td>
 </tr>
 
 <tr class="even">
-  <td> <a href="/module/forums/t/34765/" title="What would be my own ideal distribution?">My ideal distribution</a><br></td>
+  <td> <a href="/module/forums/t/35114/" title="Linux is Everywhere. We show you exactly where">Frustrating.</a><br></td>
 </tr>
 
 <tr class="odd">
-  <td> <a href="/module/forums/t/34759/" title="What Was Your First Linux Distro?">Only for the younger generation.</a><br></td>
+  <td> <a href="/module/forums/t/35111/" title="Whatever your stance on privacy, Edward Snowden has a Xmas message for you">Video Mirror</a><br></td>
 </tr>
 
 <tr class="even">
-  <td> <a href="/module/forums/t/34754/" title="Can Microsoft’s exFAT file system bridge the gap between OSes?">Mostly about</a><br></td>
+  <td> <a href="/module/forums/t/35113/" title="Ubuntu GNOME Might Fail To Do A 14.04 LTS Release">Work smarter, not harder.</a><br></td>
 </tr>
 
 <tr class="odd">
-  <td> <a href="/module/forums/t/34766/" title="Tailored to Tech: My NYC Google Glass Fitting">someone is volunteering to work for the NSA for free...</a><br></td>
+  <td> <a href="/module/forums/t/35110/" title="A Very Linux Christmas">{sniff}</a><br></td>
 </tr>
 
 <tr class="even">
-  <td> <a href="/module/forums/t/34760/" title="Top Five Best Linux Distros">Finally</a><br></td>
+  <td> <a href="/module/forums/t/35103/" title="Mozilla Thunderbird 24.2.0 Officially Lands in Ubuntu">Who uses a mail client anymore?</a><br></td>
 </tr>
 
 <tr class="odd">
-  <td> <a href="/module/forums/t/34758/" title="Snowden spy row grows as US is accused of hacking China">Update on Snowdon's movements</a><br></td>
+  <td> <a href="/module/forums/t/35097/" title="Will Canonical force Linux Mint to license Ubuntu binary packages? ">Add restrictions to GPL - lose right to distribute</a><br></td>
 </tr>
 
 <tr class="even">
-  <td> <a href="/module/forums/t/34762/" title="Linux Mint 15 XFCE and KDE Editions released">Release Candiates</a><br></td>
+  <td> <a href="/module/forums/t/35108/" title="16 Ways To Beat Cryptolocker and Ransomware">just skip to point 15: use linux</a><br></td>
 </tr>
 
 <tr class="odd">
-  <td> <a href="/module/forums/t/34761/" title="If the government wants you, where you store your data doesn’t matter">True, but what is offline is harder to get at!</a><br></td>
+  <td> <a href="/module/forums/t/35071/" title="KDE's Kdenlive Video Editor Has Gone Dark">Go to video app</a><br></td>
 </tr>
 
 </tbody></table>
 <br><a href="/module/forums/latest.php">More...</a></div><div class="block"><h2>Site Menu</h2>
 <ul style="list-style-type: circle;"><li>     <a href="/">Latest News</a>    </li><li>     <a href="/module/newswire/past/">Newswire</a>    </li><li>     <a href="/module/forums/">Forums</a>    </li><li>     <a href="/module/pages/v/10/"></a>     <a href="/module/pages/v/9/">Syndicate</a>    </li><li>     <a href="/module/newswire/stories/">Submit story</a></li><li>       <a href="/story_howto.php" target="_self">Story HOWTO</a>     </li><li>     <p>      Don't miss our      <a href="/module/newswire/lf/" target="_self">LXer Features!</a>   </p></li></ul>
-</div><div class="block ad">
-<center><a href="https://www.usenix.org/sec13/lxer"><img src="/images/sec13_button_125.png" alt="USENIX Security '13" height="125" border="0" width="125">  				</a><p>Join us in Washington, D.C., August 14-16, 2013, for the 22nd USENIX Security Symposium! USENIX Security '13 brings together researchers, practitioners, system administrators, system programmers, and others. The 3-day program includes a Keynote Address by Edward W. Felten; over 40 refereed paper presentations; and more.&nbsp; Register by July 22, 2013, and save. Additional discounts are available! <br></p></center>
-
 </div><div class="block"><h2>Other News</h2>
 <a href="http://lwn.net/">- LWN.net</a>  <br>  Their weekly coverage of Linux news is unmatched in this community.  <br>  <br>  <a href="http://freecode.com/">- Freecode</a><br>  All software updates are announced on Freecode.  <br>  <br>  <a href="http://linuxgizmos.com/">- LinuxGizmos.com</a><br>  Excellent news for embedded Linux.<br>  <br><a href="http://www.freesoftwaremagazine.com/" target="_self">- Free Software Magazine</a><br>Free Software Magazine is a magazine entirely dedicated to free software. It contains quality articles relating to both technical and non-technical issues.<br>  <br><a href="http://www.linuxquestions.org/">- LinuxQuestions.org</a>  <br>Discussion forums for Linux users.  <br>  <br>  - <a href="http://linuxhomepage.com/" target="_self">LinuxHomepage.com</a><br>  A collection of Linux and free software news RSS feeds.<br>  <br>- <a href="http://www.mobiletechnews.com/" target="_self">MobileTechNews.com</a><br>News website pertaining to mobile technologies.
 
@@ -175,7 +172,7 @@ We require an e-mail address because, unlike your real name, it identifies you u
 					<ul>
 						<li>© <a href="http://www.wmkt.com/">WebMarket</a></li>
 
-						<li>All times are recorded in Eastern Daylight Time (EDT)</li>
+						<li>All times are recorded in Eastern Standard Time (EST)</li>
 					</ul>
 					<ul>
 						<li><a href="/module/helpdesk/contact.php">Contact Us</a></li>
