--- a/w/wi/wil/willmaster.com.html
+++ b/w/wi/wil/willmaster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the willmaster.com privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628010150id_/http%3A//www.willmaster.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the willmaster.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227012324id_/http%3A//www.willmaster.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <!--
@@ -22,7 +22,7 @@
 <a href="/privacy-policy.php">Privacy Policy</a> |
 <a href="/aboutus.php">About Us</a>
 <div style="position:absolute; top:35px; right:5px;">
-<a href="https://www.willmaster.com/software/WebSitesSecret/login.php">Log In to WebSite's Secret</a>
+<a href="http://www.willmaster.com/software/WebSitesSecret/entry.php">Log In to WebSite's Secret</a>
 </div>
 </div>
 <!-- /toprightnav -->
@@ -35,7 +35,7 @@
 <b>Support</b> so good it's actually talked about.
 
 </p>
-<p><strong>Will Bontrager</strong> builds powerful software solutions backed with a decade of experience.</p>
+<p><strong>Will Bontrager</strong> builds powerful software solutions backed with 15 years of personal experience.</p>
 </div><!--/tagline-->
 
 <div id="navcontainer">
@@ -96,22 +96,22 @@ Will Bontrager Software LLC Privacy Policy
 Will Bontrager Software, LLC ("us", "we", or "our") has created this privacy statement in order to demonstrate our commitment to privacy.
 </p>
 <p>
-The following discloses our information gathering and dissemination practices for the web sites operated by us (the "Web Sites").
+The following discloses our information gathering and dissemination practices for the websites operated by us (the "Websites").
 </p>
 <p>
 <b>Links</b>
 </p>
 <p>
-The Web Sites contain links to other web sites, which may be information, advertising, or other links. We are not responsible for the privacy practices or the content of such web sites.
+The Websites contain links to other websites, which may be information, advertising, or other links. We are not responsible for the privacy practices or the content of such websites.
 </p>
 <p>
-We only recommend things we believe in. As remuneration for the time and research involved to provide quality links, we generally use affiliate links when we can. Whenever we link to anywhere other than the Web Sites, you should assume they are affiliate links or that we benefit in some way.
+We only recommend things we believe in. As remuneration for the time and research involved to provide quality links, we generally use affiliate links when we can. Whenever we link to anywhere other than the Websites, you should assume they are affiliate links or that we benefit in some way.
 </p>
 <p>
-<b>Information Gathered by Third Parties and Other Web Sites</b>
+<b>Information Gathered by Third Parties and Other Websites</b>
 </p>
 <p>
-Third parties and other web sites may be placing and reading cookies on your browser, or using web beacons to collect information, or logging access or activity, in the course of content pages, ads, or other content being served or responded to at the Web Sites. We have no authority over, and can not control, how the information is used.
+Third parties and other Websites may be placing and reading cookies on your browser, or using web beacons to collect information, or logging access or activity, in the course of content pages, ads, or other content being served or responded to at the Websites. We have no authority over, and can not control, how the information is used.
 </p>
 <p>
 <b>Ads</b>
@@ -124,24 +124,24 @@ document.getElementById("adoptionsread").style.display = "block";
 }
 //--></script>
 <p>
-We use third-party advertising companies to serve ads when you visit the Web Sites. These companies may use information about your visits to the Web Sites and other sites on the Internet in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, <span id="adoptionsclick"><a href="javascript:RevealOptions()">click here</a></span><span id="adoptionsrevealed" style="display: none;">see the section below</span>.
+We use third-party advertising companies to serve ads when you visit the Websites. These companies may use information about your visits to the Websites and other sites on the Internet in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, <span id="adoptionsclick"><a href="javascript:RevealOptions()">click here</a></span><span id="adoptionsrevealed" style="display: none;">see the section below</span>.
 </p>
 <div id="adoptionsread" style="display: none; margin-left: 25px; border-style: solid none solid solid; border-width: 1px 0pt 1px 1px; padding: 3px 0pt 3px 25px;">
 <p><b>Interest based advertising choices and information:</b></p>
 <p>
 Please follow links of interest to you. 
-If any links are disabled or broken, use a contact link at our <a href="http://www.willmaster.com/">WillMaster.com Web Site</a> 
+If any links are disabled or broken, use a contact link at our <a href="http://www.willmaster.com/">WillMaster.com Website</a> 
 and request up-to-date links.
 </p>
 <ul>
 <li>
 <p>
-Google, as a third party vendor, uses cookies to serve ads on the Web Sites.
+Google, as a third party vendor, uses cookies to serve ads on the Websites.
 </p>
 </li>
 <li>
 <p>
-Google's use of <a href="http://www.doubleclick.com/privacy/faq.aspx">the DoubleClick DART cookie</a> enables it to serve ads to you based on your visits to the Web Sites and other sites on the Internet.
+Google's use of <a href="http://www.doubleclick.com/privacy/faq.aspx">the DoubleClick DART cookie</a> enables it to serve ads to you based on your visits to the Websites and other sites on the Internet.
 </p>
 </li>
 <li>
@@ -155,37 +155,37 @@ You may opt out of the use of the DART cookie by following the directions found 
 <b>Children</b>
 </p>
 <p>
-The Web Sites are designed for the use of adults. Any children at the Web Sites must be accompanied by responsible adults and any interaction with the Web Sites must be performed by adults. The Web Sites do not knowingly collect personal information from children under the age of 13.
+The Websites are designed for the use of adults. Any children at the Websites must be accompanied by responsible adults and any interaction with the Websites must be performed by adults. The Websites do not knowingly collect personal information from children under the age of 13.
 </p>
 <p>
-<b>Data Collection On The Web Sites</b>
+<b>Data Collection On The Websites</b>
 </p>
 <p>
-We may use cookies to customize Web Sites or provide a better user experience.
+We may use cookies to customize Websites or provide a better user experience.
 </p>
 <p>
-We may keep a record of information provided during the use of forms on the Web Sites and information provided by other methods. Email addresses of form users may be used for communication initiated with the form, or to send messages or content related to the purpose of the form. Unless such is within the purpose or intent of the form, no email addresses provided on our forms are added to any of our subscription or notification lists.
+We may keep a record of information provided during the use of forms on the Websites and information provided by other methods. Email addresses of form users may be used for communication initiated with the form, or to send messages or content related to the purpose of the form. Unless such is within the purpose or intent of the form, no email addresses provided on our forms are added to any of our subscription or notification lists.
 </p>
 <p>
-The Web Sites may collect and aggregate information, including anonymous information. Domain names, users' system data, IP addresses, and other information may be logged. When personal information is provided, that information may be logged.
+The Websites may collect and aggregate information, including anonymous information. Domain names, users' system data, IP addresses, and other information may be logged. When personal information is provided, that information may be logged.
 </p>
 <p>
-We may compile or mine information collected by the Web Sites for statistical, demographic, visitor usage, diagnostic, planning, administrative, content creation, site design, software monitoring, and/or other purposes.
+We may compile or mine information collected by the Websites for statistical, demographic, visitor usage, diagnostic, planning, administrative, content creation, site design, software monitoring, and/or other purposes.
 </p>
 <p>
-No personal information collected by the Web Sites will be voluntarily released to any person or entity not involved with the maintenance or support of any of the Web Sites or affiliated with any of the Web Sites, unless one or more of the Web Sites are sold or ownership otherwise transferred, in which case all information and records pertaining to that Web Sites may be transferred to the new owner(s). We would not be responsible for the privacy practices of the new owner(s).
+No personal information collected by the Websites will be voluntarily released to any person or entity not involved with the maintenance or support of any of the Websites or affiliated with any of the Websites, unless one or more of the Websites are sold or ownership otherwise transferred, in which case all information and records pertaining to that Websites may be transferred to the new owner(s). We would not be responsible for the privacy practices of the new owner(s).
 </p>
 <p>
 <b>Contact</b>
 </p>
 <p>
-If you wish to unsubscribe, choose to opt-out, or wish to be removed from any Web Site's subscription or other database records, use the method provided with emails you receive or, failing that, use a contact link at our <a href="http://www.willmaster.com/">WillMaster.com Web Site</a> and provide us with all information we may require to remove you from our records.
+If you wish to unsubscribe, choose to opt-out, or wish to be removed from any Website's subscription or other database records, use the method provided with emails you receive or, failing that, use a contact link at our <a href="http://www.willmaster.com/">WillMaster.com Website</a> and provide us with all information we may require to remove you from our records.
 </p>
 <p>
 <b>Questions</b>
 </p>
 <p>
-If you have any questions about this privacy policy, the practices of any of the Web Sites, or your dealings with any of the Web Sites, use a contact link at the <a href="https://www.willmaster.com/">WillMaster.com</a> web site and provide us with all information we may require to understand your questions or concerns and to respond to you. 
+If you have any questions about this privacy policy, the practices of any of the Websites, or your dealings with any of the Websites, use a contact link at the <a href="https://www.willmaster.com/">WillMaster.com</a> Website and provide us with all information we may require to understand your questions or concerns and to respond to you. 
 </p>
 
 
