citywire.co.uk (archived on 2013-12-27)
{
  "alexa_rank": 55863,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8389,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.52,
  "homepage_snapshot_redirected_domain": "citywire.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131002234551id_/http://citywire.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131002234551id_/http%3A//citywire.co.uk",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "citywire.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227014618id_/http%3A//citywire.co.uk/legal/privacy.aspx",
  "policy_title": "Citywire",
  "policy_url": "citywire.co.uk/legal/privacy.aspx",
  "sha1": "e230c7fc7c86b4d3d85ef4fc8bc0a53566389fe6",
  "simhash": 12590876561953534022,
  "simhash_updated": false,
  "site_hostname": "citywire.co.uk",
  "site_url": "http://citywire.co.uk",
  "smog": 14.79,
  "strict_updated": false,
  "timestamp": "20131227014618",
  "word_count": 1362,
  "year": 2013
}

--- a/c/ci/cit/citywire.co.uk.html
+++ b/c/ci/cit/citywire.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the citywire.co.uk privacy policy that was archived on 2013-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130610180013id_/http%3A//citywire.co.uk/legal/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the citywire.co.uk privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227014618id_/http%3A//citywire.co.uk/legal/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Citywire
@@ -11,6 +11,18 @@
 <div>
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUENTM4MWRkTebQbk2qyuGUCjjkyzzLCrG8uvU=">
 </div>
+
+
+<!--BEGINNING OF SPIDER DETECTOR SCRIPT-->
+<script language="javascript">
+var imgPath = "http://www.citywire.co.uk/CE.aspx?pid=5c3c1f64-f314-42ef-9371-d63c0296cbe7&uid=faf233e6-2957-4760-a606-adc5efa36745";
+	if(document.layers){ 
+document.write("<layer name=\"CWSpiderDetector\" visibility=hide><img src="+ imgPath + " height=1 width=1></layer>");
+	} else { 
+document.write("<div name=\"CWSpiderDetector\" STYLE=\"position:absolute;visibility:hidden;\"><img src="+ imgPath + " height=1 width=1></div>");
+	} 
+</script><div name="CWSpiderDetector" style="position:absolute;visibility:hidden;"><img src="http://www.citywire.co.uk/CE.aspx?pid=5c3c1f64-f314-42ef-9371-d63c0296cbe7&amp;uid=faf233e6-2957-4760-a606-adc5efa36745" height="1" width="1"></div>
+<!--END OF SPIDER DETECTOR SCRIPT-->
 
     <div class="remove">
       <input type="hidden" name="OAS_Query" id="OAS_QueryHidden" value="">
