--- a/w/wo/wor/wordstream.com.html
+++ b/w/wo/wor/wordstream.com.html
@@ -1,17 +1,17 @@
-<!--The following is the downloaded HTML source of the wordstream.com privacy policy that was archived on 2013-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130603124621id_/http%3A//www.wordstream.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wordstream.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227020648id_/http%3A//www.wordstream.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>WordStream Privacy Policy | WordStream</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="WordStream is a registered trademark of WordStream, Inc. Copyright &amp;copy; 2008-2011, All Rights Reserved.">
 <meta name="description" content="Last Updated: December 4, 2008 We at WordStream, Inc. (&amp;quot;WordStream&amp;quot;) are constantly striving to provide excellent service to you while building a long-lasting relationship with you. To achieve these goals, we occasionally need">
 <meta name="keywords" content="Search Engine Marketing,Search Engine Optimization,SEO,SEM,Google Adwords,Pay-Per-Click,Quality Score,Web Marketing">
 <meta name="robots" content="index,follow">
 <meta name="DC.title" content="WordStream Privacy Policy">
 <link rel="shortcut icon" href="/sites/all/themes/qc_ws/favicon.ico" type="image/x-icon">
-        <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="/sites/default/files//js/js_9a942067fac96169cce95b8d41c86af9.js"></script>
+        <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="/sites/default/files//js/js_de1deb7ff6405153ed6b39cacb240755.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/" });
@@ -185,29 +185,22 @@ $(document).ready(function(){
 	});
 //--><!]]>
 </script>
-        <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files//css/css_192a67c1bc0cd3e9bf3639fa4651c7c9.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files//css/css_b7fd4d846b925236c04cfd872d5aa9c6.css">
+        <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files//css/css_8cc8f674bfc78a317a11b1e24532dd78.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files//css/css_1d96f1fc8f6c55a763ccfed0ca4a7732.css">
 <!--[if IE]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/zen/zen/ie.css?i" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/zen/zen/ie.css?9" />
 <![endif]-->
 <!--[if IE 6]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/qc_ws/ie6.css?i" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/qc_ws/ie6.css?9" />
 <![endif]-->
         <link rel="stylesheet" type="text/css" href="/redesign/styles.css">
         <link rel="stylesheet" media="print" type="text/css" href="/sites/all/themes/wordstream/print.css">
         <link href="/sites/all/themes/qc_ws/src_12_01_09/css/master.css?v=120109" type="text/css" rel="stylesheet">
         
-				<!-- Start Visual Website Optimizer Asynchronous Code (#8060) -->
-				<script type="text/javascript">
-				var _vwo_code=(function(){
-				var account_id=28609,
-				settings_tolerance=2000,
-				library_tolerance=1500,
-				use_existing_jquery=false,
-				// DO NOT EDIT BELOW THIS LINE
-				f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-				</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=28609&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20130603124621id_%2Fhttp%253A%2F%2Fwww.wordstream.com%2Fprivacy-policy&amp;r=0.9137679914939669" type="text/javascript"></script>
-				<!-- End Visual Website Optimizer Asynchronous Code -->
+        <!-- #10848 -->
+        <script src="//cdn.optimizely.com/js/96178302.js"></script>
+        <!-- End of #10848 -->
+
     <script src="https://bounceexchange.com/bounce/i.js?client_id=506" async=""></script></head>
     <body class="not-front not-logged-in node-type-page one-sidebar sidebar-left page-privacy-policy section-privacy-policy fluid channel-products" onload="init_search('')">
         <div id="qcinProLayout">
@@ -230,9 +223,9 @@ $(document).ready(function(){
 <div class="rightBoxLink">
 
                         <ul class="links"><li class="menu-1842 active-trail first"><a href="/products" title="">Products</a></li>
-<li class="menu-1834"><a href="/learn" title="">Learn SEM</a></li>
+<li class="menu-1834"><a href="/learn" title="">PPC U</a></li>
 <li class="menu-1852"><a href="/blog" title="">Blog</a></li>
-<li class="menu-1835"><a href="/top-questions" title="">Support</a></li>
+<li class="menu-2341"><a href="/support" title="WordStream PPC Advisor Support">Support</a></li>
 <li class="menu-2077 last"><a href="/google-adwords" title="AdWords">AdWords Grader</a></li>
 </ul>
 						<div id="qc_text_links_access" class="ws_logged_in" style="display: none;">
@@ -362,8 +355,7 @@ $(document).ready(function(){
 <li class="menu-1867"><a href="/investors" title="">Investors</a></li>
 <li class="menu-1868"><a href="/jobs" title="">Jobs</a></li>
 <li class="menu-1982"><a href="/partners" title="WordStream's Strategic Search Marketing Partners - Become an SEM Partner Today">Partners</a></li>
-<li class="menu-1876 active-trail"><a href="/legal" title="WordStream Legal Documents">Legal</a></li>
-<li class="menu-1901 last"><a href="/contact-us" title="">Contact</a></li>
+<li class="menu-1876 active-trail last"><a href="/legal" title="WordStream Legal Documents">Legal</a></li>
 </ul>					</div>
 			</div>
 		</div>
@@ -507,7 +499,7 @@ $(document).ready(function(){
 <span class="wsrtLogos"><img src="/sites/all/themes/qc_ws/images/ws-rt-logos.gif" alt="" style="float: right;"></span>
 </div>
 </div>
-<div style="margin:20px auto; width:960px "><style>
+<div class="block_138" style="margin:20px auto; width:960px "><style>
 .footer_item { padding: 0 25px 0 0; }
 </style>
 <div class="footer_item menu_footer_products">
