--- a/t/ti/tic/tickettailor.com.html
+++ b/t/ti/tic/tickettailor.com.html
@@ -1,14 +1,15 @@
-<!--The following is the downloaded HTML source of the tickettailor.com privacy policy that was archived on 2013-05-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130511104648id_/http%3A//www.tickettailor.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tickettailor.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227024727id_/http%3A//www.tickettailor.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="icon" type="image/png" href="/tickettailor-favicon.ico">
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><script src="//cdn.optimizely.com/js/246665372.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="icon" type="image/png" href="http://d1j6hj71rjolg1.cloudfront.net/r/80b4c5d/tickettailor-favicon.ico">
   <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&amp;subset=latin" media="screen" rel="stylesheet" type="text/css"><title>Ticket Tailor / Sell tickets online YOUR way!</title><meta name="keywords" content="sell tickets online, selling tickets online, sell tickets no fees, no booking fees, e-tickets">
 <meta name="description" content="Ticket Tailor is a customisable, supported platform to sell tickets online. And best of all, we won't charge you or your customers any booking fees."><link rel="stylesheet" href="/js/jquery/css/ui-lightness/jquery-ui-1.8.9.custom.css" type="text/css" media="screen">
 
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/js/jquery/js/jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="/js/jquery/js/jquery-1.4.4.min.js"></script>
 <script type="text/javascript" src="/js/jquery/js/jquery-ui-1.8.9.custom.min.js"></script>
 <script type="text/javascript" src="/js/jquery/js/jquery.cycle.js"></script>
 <script type="text/javascript" src="/js/jquery/js/coda-slider.js"></script>
@@ -162,5 +163,5 @@
 	<script type="text/javascript">
 	$(".modal-link").colorbox({width:"500px", height:"480px", iframe:true, 'close':''});
 	</script>
-
-</body></html>
+<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","d548f86585","2339694","ZFRVbUcDXBcEWxFYW10edlpBC10KSnYKfFtXRFtcGgtcAABASkFGWkdWWkxPQgsJUQZI",0,59,new Date().getTime(),"","","","",""]);</script>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
